# x86id

./: .gitignore  CMakeLists.txt  Licence  README.md  cpuid.c  cpuid.h
include/: cpuid.h  leaf2_descriptors.h  utils.h
src/: cpuid.c
